// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip bottom center 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #fff;
  color: #001833;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  left: 50%;
  margin-left: 7px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="background.lightest"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip bottom left 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #fff;
  color: #001833;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  left: 16px;
  margin-left: 15px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="background.lightest"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip bottom right 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #fff;
  color: #001833;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
  right: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  right: 16px;
  margin-right: -10px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="background.lightest"
  >
    right tooltip
  </div>
</div>
`;

exports[`Tooltip renders 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #fff;
  color: #001833;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  right: 16px;
  margin-right: -10px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="background.lightest"
  >
    A Tooltip
  </div>
</div>
`;

exports[`Tooltip top center 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #0068EF;
  color: #fff;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #0068EF;
  text-align: center;
  bottom: -8px;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #0068EF #0068EF;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  left: 50%;
  margin-left: -7px;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="primary"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip top left 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #0068EF;
  color: #fff;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #0068EF;
  text-align: center;
  bottom: -8px;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #0068EF #0068EF;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  left: 16px;
  margin-left: 0;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="primary"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip top right 1`] = `
.c0 {
  margin-top: 8px;
  margin-bottom: 16px;
  padding: 8px;
  background-color: #c00;
  color: #fff;
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #c00;
  text-align: center;
  bottom: -8px;
  right: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #c00 #c00;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  right: 16px;
  margin-right: 5px;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
      "zIndex": "auto",
    }
  }
>
  <div
    className="c0"
    color="error"
  >
    right tooltip
  </div>
</div>
`;
